[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.129.0",
    "openai>=2.21.0",
    "openai-agents>=0.9.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
]
